force-app/main/default/objects/Employee_effort__c/Employee_effort__c.object-meta.xml
<CustomObject>
    <label>Employee effort</label>
    <nameField>
        <displayFormat>EF-{000}</displayFormat>
        <label>Employee effort ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee efforts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>