force-app/main/default/objects/Employee_effort__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>Emplyee__c</referenceTo>
    <relationshipLabel>Employee efforts</relationshipLabel>
    <relationshipName>Employee_efforts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>