force-app/main/default/objects/Employee_effort__c/fields/Hour_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hour_Worked__c</fullName>
    <label>Hour Worked</label>
    <precision>17</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>