force-app/main/default/objects/Employee_effort__c/fields/Hourly_Worked_Salary__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Worked_Salary__c</fullName>
    <formula>(Hour_Worked__c *100.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Worked Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>